--- a/WoowahanFresh/WoowahanFresh/View + Controller/5.반찬/Cell/OtherItemCell.xib
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/5.반찬/Cell/OtherItemCell.xib
@@ -12,52 +12,45 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="OtherItemCell" selectionStyle="default" indentationWidth="10" rowHeight="364" id="KGk-i7-Jjw" customClass="OtherItemCell" customModule="WoowahanFresh" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="364"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="OtherItemCell" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="OtherItemCell" customModule="WoowahanFresh" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="363.66666666666669"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="82.666666666666671"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VrR-FY-Vv1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="5"/>
-                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="5" id="jkS-Qq-nEC"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="krQ-vg-YQK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="82.666666666666671"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="회사 이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRe-qd-V5A">
+                        <rect key="frame" x="16.000000000000004" y="5" width="63.333333333333343" height="20.333333333333332"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="의 다른 상품" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DbJ-Bo-UaG">
-                        <rect key="frame" x="107" y="50" width="83" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="회사 이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qRe-qd-V5A">
-                        <rect key="frame" x="16" y="29" width="83" height="42"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="83" id="3oG-Ti-CDo"/>
-                        </constraints>
+                        <rect key="frame" x="87" y="8" width="83" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="VrR-FY-Vv1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="4d1-8g-LuT"/>
-                    <constraint firstItem="DbJ-Bo-UaG" firstAttribute="top" secondItem="VrR-FY-Vv1" secondAttribute="bottom" constant="45" id="6Ia-nX-aJE"/>
-                    <constraint firstItem="VrR-FY-Vv1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="7mn-gQ-wx1"/>
-                    <constraint firstAttribute="trailing" secondItem="VrR-FY-Vv1" secondAttribute="trailing" id="DEM-2j-vMT"/>
-                    <constraint firstItem="qRe-qd-V5A" firstAttribute="top" secondItem="VrR-FY-Vv1" secondAttribute="bottom" constant="24" id="cap-Jf-2FI"/>
-                    <constraint firstItem="qRe-qd-V5A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="csz-9M-OQf"/>
-                    <constraint firstItem="qRe-qd-V5A" firstAttribute="baseline" secondItem="DbJ-Bo-UaG" secondAttribute="baseline" id="uA8-0d-6yl"/>
-                    <constraint firstItem="DbJ-Bo-UaG" firstAttribute="leading" secondItem="qRe-qd-V5A" secondAttribute="trailing" constant="8" symbolic="YES" id="vdo-E9-GbC"/>
+                    <constraint firstItem="DbJ-Bo-UaG" firstAttribute="leading" secondItem="qRe-qd-V5A" secondAttribute="trailing" constant="7.6699999999999999" id="DBo-54-hy9"/>
+                    <constraint firstItem="krQ-vg-YQK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="N1j-QO-LiF"/>
+                    <constraint firstItem="qRe-qd-V5A" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="U2Z-Sy-XUs"/>
+                    <constraint firstItem="DbJ-Bo-UaG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="XJW-EQ-4hb"/>
+                    <constraint firstItem="krQ-vg-YQK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="cKy-qI-nEf"/>
+                    <constraint firstAttribute="bottom" secondItem="krQ-vg-YQK" secondAttribute="bottom" id="sId-Ms-GNc"/>
+                    <constraint firstItem="qRe-qd-V5A" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="tXv-80-xoL"/>
+                    <constraint firstAttribute="trailing" secondItem="krQ-vg-YQK" secondAttribute="trailing" id="wK1-S5-rvF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="92.028985507246389" y="183.48214285714286"/>
+            <point key="canvasLocation" x="92.028985507246389" y="99.441964285714278"/>
         </tableViewCell>
     </objects>
 </document>
