--- a/WoowahanFresh/WoowahanFresh/View + Controller/7. 결제하기/DeliveryDay.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/7. 결제하기/DeliveryDay.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Delivery Day View Controller-->
+        <!--Delegate-->
         <scene sceneID="QwR-QV-mSN">
             <objects>
                 <viewController storyboardIdentifier="DeliveryDayViewController" id="KB1-nT-cfQ" customClass="DeliveryDayViewController" customModule="WoowahanFresh" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,10 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLV-TP-wFd">
-                                <rect key="frame" x="12" y="185" width="382" height="102"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLV-TP-wFd">
+                                <rect key="frame" x="20" y="747" width="374" height="75"/>
                                 <color key="backgroundColor" red="0.36917477850000002" green="0.74517530200000004" blue="0.73333710429999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="SO8-xh-AJh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="22"/>
                                 <state key="normal" title="주문하기">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -29,10 +32,54 @@
                                     <action selector="btnOrder:" destination="KB1-nT-cfQ" eventType="touchUpInside" id="S9B-H6-3H7"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="320-34-b7W" customClass="FSCalendar">
+                                <rect key="frame" x="20" y="44" width="374" height="529"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="delegate" destination="KB1-nT-cfQ" id="dRk-E2-SSx"/>
+                                </connections>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="77k-B2-Blw">
+                                <rect key="frame" x="90" y="620" width="234.33333333333337" height="94"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상품 배송일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWL-II-cEU">
+                                        <rect key="frame" x="71.666666666666657" y="0.0" width="91" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018-12-27             " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Jv-vL-Oh5">
+                                        <rect key="frame" x="0.0" y="31.999999999999996" width="234.33333333333334" height="33.666666666666657"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d2J-ar-g64">
+                                        <rect key="frame" x="96.333333333333343" y="73.666666666666629" width="41.666666666666657" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="HLV-TP-wFd" firstAttribute="top" secondItem="77k-B2-Blw" secondAttribute="bottom" constant="33" id="2Zv-EA-dYS"/>
+                            <constraint firstItem="320-34-b7W" firstAttribute="top" secondItem="FnC-nn-4WP" secondAttribute="top" id="5Pr-uz-85U"/>
+                            <constraint firstItem="320-34-b7W" firstAttribute="leading" secondItem="zlA-rs-Htb" secondAttribute="leadingMargin" id="8L3-bJ-Oea"/>
+                            <constraint firstItem="320-34-b7W" firstAttribute="leading" secondItem="HLV-TP-wFd" secondAttribute="leading" id="QKR-8B-58j"/>
+                            <constraint firstItem="77k-B2-Blw" firstAttribute="centerX" secondItem="HLV-TP-wFd" secondAttribute="centerX" id="WQv-kq-xw4"/>
+                            <constraint firstItem="77k-B2-Blw" firstAttribute="top" secondItem="320-34-b7W" secondAttribute="bottom" constant="47" id="kfQ-n2-XGc"/>
+                            <constraint firstItem="320-34-b7W" firstAttribute="trailing" secondItem="HLV-TP-wFd" secondAttribute="trailing" id="qLD-LZ-Qhf"/>
+                            <constraint firstItem="FnC-nn-4WP" firstAttribute="bottom" secondItem="HLV-TP-wFd" secondAttribute="bottom" constant="40" id="vTA-aS-3aq"/>
+                            <constraint firstItem="320-34-b7W" firstAttribute="trailing" secondItem="zlA-rs-Htb" secondAttribute="trailingMargin" id="ycm-LK-CPQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="FnC-nn-4WP"/>
                     </view>
+                    <connections>
+                        <outlet property="labelDate" destination="1Jv-vL-Oh5" id="E9q-Si-muj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7gx-qK-toq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
