--- a/WoowahanFresh/WoowahanFresh/View + Controller/0. 탭바 - 마이페이지/회원가입/SignUp.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/0. 탭바 - 마이페이지/회원가입/SignUp.storyboard
@@ -96,6 +96,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="회원가입" id="jK6-Ae-1eZ">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="arrow" id="SFK-tV-exj">
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="btnClose:" destination="mgo-Fh-zBI" id="Eys-XZ-F46"/>
                             </connections>
