--- a/WoowahanFresh/WoowahanFresh/View + Controller/4. 반찬카테고리/DishCategoryList.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/4. 반찬카테고리/DishCategoryList.storyboard
@@ -38,11 +38,14 @@
                     </view>
                     <navigationItem key="navigationItem" id="4VL-Q0-5IQ">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="arrow" id="Jxh-yN-4Fn">
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="vuu-yD-Q5g" kind="unwind" unwindAction="unwindToHomeTable:" id="MuF-kb-3fY"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="shopping" id="LWV-zU-IRV"/>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="shopping" id="LWV-zU-IRV">
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="vSv-oa-LYl" id="3x1-IE-9mI"/>
@@ -74,6 +77,6 @@
     </scenes>
     <resources>
         <image name="arrow" width="54" height="54"/>
-        <image name="shopping" width="54" height="54"/>
+        <image name="shopping" width="26.666666030883789" height="26.666666030883789"/>
     </resources>
 </document>
