--- a/WoowahanFresh/WoowahanFresh/View + Controller/5.반찬/Item.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/5.반찬/Item.storyboard
@@ -68,6 +68,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="BHM-1q-8y3">
                         <barButtonItem key="leftBarButtonItem" image="arrow" id="r3d-Vb-UkL">
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="qkO-ya-oYe" kind="unwind" unwindAction="unwindToDishCategory:" id="elA-aw-EDX"/>
                             </connections>
@@ -78,7 +79,8 @@
                                     <action selector="btnShopping:" destination="Dxd-SJ-BGd" id="7qx-WK-snv"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem title="공유" id="zSP-9n-5i5">
+                            <barButtonItem image="share" id="zSP-9n-5i5">
+                                <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="btnShare:" destination="Dxd-SJ-BGd" id="gQq-Ps-6DN"/>
                                 </connections>
@@ -116,6 +118,7 @@
     <resources>
         <image name="arrow" width="54" height="54"/>
         <image name="heartNil" width="54" height="54"/>
-        <image name="shopping" width="54" height="54"/>
+        <image name="share" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="shopping" width="26.666666030883789" height="26.666666030883789"/>
     </resources>
 </document>
