--- a/WoowahanFresh/WoowahanFresh/View + Controller/6. 장바구니/ShoppingList.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/6. 장바구니/ShoppingList.storyboard
@@ -39,6 +39,7 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="장바구니" id="ZZa-Qh-17h">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="x" id="eJF-X0-0uf">
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="btnClose:" destination="d5J-cU-tyW" id="WrR-I6-KyE"/>
                             </connections>
