--- a/WoowahanFresh/WoowahanFresh/View + Controller/8. 결제하기/Payment.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View + Controller/8. 결제하기/Payment.storyboard
@@ -233,7 +233,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="결제하기" id="CGj-Kf-ecW">
                         <barButtonItem key="leftBarButtonItem" image="arrow" id="4hP-pu-wJl">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <segue destination="pEK-hw-kfY" kind="unwind" identifier="unwindPostCode" unwindAction="unwindToPaymentView:" id="Fh2-sU-PvX"/>
                             </connections>
